# pacs-rcv

./: README.md  TODO
cpp/: fast_processor.cpp  move.sh  setup.py
setup/: install_vector.sh
src/: auth.py  config.py  deploy.sh  dicom_utils.py  docker-compose.yml  jobs.py  main.py  models.py  orthanc.json  pyproject.toml  requirements.txt  worker.py
src/routers/: admin.py  forward.py  instances.py  jobs.py  query.py  studies.py  upload.py
